[package]
name = "tpcompress"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.16",features = ["derive"]}
clap_derive = "4.5.13"
colog = "1.3.0"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = {version="0.12.7",features=["blocking"]}
serde = { version = "1.0.208", features = ["serde_derive"] }
serde_json = "1.0.125"
